--- a/index.html
+++ b/index.html
@@ -1,19 +1,35 @@
 <h1>Zeynep Aladağ</h1>
 <p>Merhaba. Ben Zeynep Aladağ. Bursalıyım. Mimarım. Kitap okumayı çok seviyorum.</p>
-<h2><b>Son Okuduğum Kitap</b></h2>
-<h3>Para - Antik Çağdan Geleceğe</h3>
+<h2>
+    <b>Son Okuduğum Kitap</b>
+</h2>
+<h3>
+    Para - Antik Çağdan Geleceğe
+</h3>
 <p> <b>Yazar:</b> Dursun Ali Yaz</p>
+
 <img src="../gorseller/Para.png">
 <p>Paranın antik çağlarda günümüze evrimini çok akıcı ve eğlenceli bir dil ile anlatıyor.</p>
+
 <p>Günlük hayatta kullandığımız birçok değimin nerden çıktığını, aslında neye dayandığını öğrenmek oldukça eğlenceli.</p>
-<h3>Senin Cahilliğin Benim Yaşamımı Etkiliyor</h3>
-<p><b>Yazar:</b> A. M. Celal Şengör</p>
+
+<h3>
+    Senin Cahilliğin Benim Yaşamımı Etkiliyor
+</h3>
+<p>
+    <b>Yazar:</b> A. M. Celal Şengör
+</p>
 <img src="../gorseller/senin cahilligin.jpg">
+
 <p>Oldukça ilginç bir kitap.</p>
+
 <p>Televizyonda gördüğümüz Celal Hocayı daha iyi anlayabilmek adına. Okudukça insan adam ne kadar haklıymış ya dedirttiği. Keşke bu söyledikleri uygulanabilse diye hayıflandıran bir kitap.</p>
+
 <p>Daha kitabı bitirememiş olsamda tavsiye edebileceğimi düşünüyorum.</p>
 
-<h2><b>Okunması Planlanan Kitaplar</b></h2>
+<h2>
+    <b>Okunması Planlanan Kitaplar</b>
+</h2>
 <ul>
     <li>
         <a href="https://www.goodreads.com/book/show/11986979-sana-g-l-bah-esi-vadetmedim"><em>Sana Gül Bahçesi Vadetmedim</em></a>
@@ -25,7 +41,9 @@
         <em>Cehenneme Övgü</em>
     </li>
 </ul>
-<h2><b>İzlenmesi Planlanan Diziler</b></h2>
+<h2>
+    <b>İzlenmesi Planlanan Diziler</b>
+</h2>
 <ul style="list-style-type: square;">
     <li>
         <a href="https://www.imdb.com/title/tt14169770/" target="_blank">The Devil Judge</a>
